# research_commons

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: source_health.yml
migrations/market/: 0001_init.sql  0002_scope_groups.sql
migrations/news/: 0001_init.sql  0002_compat.sql  0003_source_health.sql  0004_health_improvements.sql  0005_schema_precision.sql  0006_ticker_aliases.sql
research_commons/: __init__.py  config.py  tickers.py  types.py
research_commons/db_market/: __init__.py  connection.py  ddl.py  reads.py  writes.py
research_commons/db_news/: __init__.py  connection.py  ddl.py  reads.py  writes.py
research_commons/llm/: __init__.py  client.py  prompts.py
research_commons/source_health/: __init__.py  __main__.py  checker.py  classifier.py  emailer.py  report.py
research_commons/sources/: __init__.py  normalize.py  registry.py
scripts/: check_connections.py
tests/: test_db_news_reads.py  test_db_news_writes.py  test_source_health.py
